Reconstructed allele and chromosome base mechanics.
PortableAnalyzer GUI Page 1 and Page 2 finalization, Mutations implementation and BlockEntity basics.